ci(Travis): introduce initial configuration incl. semantic-release

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hexonet/whmcs-ispapi-helper",
     "type": "library",
-    "description": "The ISPAPI Helper Module.",
+    "description": "The WHMCS ISPAPI Helper Module.",
     "keywords": [
         "whmcs",
         "web host automation platform",
