--- a/.travis.yml
+++ b/.travis.yml
@@ -13,21 +13,23 @@ cache:
   - "~/.npm"
   - node_modules
 php:
-- 5.6.38
-- 7.0.32
-- 7.1.26
-- 7.2.15
-- 7.3.2
+- 5.6
+- 7.1
+- 7.2
+- 7.3
 # Trigger a push build on master and dependabot branches + PRs build on every branches
 # Avoid double build on PRs (See https://github.com/travis-ci/travis-ci/issues/1147)
 branches:
   only:
     - master
     - /^dependabot.*$/
+before_install:
+  - export PATH="$HOME/.config/composer/vendor/bin:$PATH"
 install:
-- travis_retry composer install
+  - travis_retry composer install
+  - travis_retry composer global require squizlabs/php_codesniffer
 script:
-- composer run-script codeCheck
+  - composer run-script codeCheck
 jobs:
   include:
     - stage: release
