build(composer): cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,10 @@
 
 # Composer
 composer.phar
-composer.lock
-vendor/*
+vendor
 
 # npm
 node_modules
-package-lock.json
 
 # Coverage Reporting
 report
