--- a/package.json
+++ b/package.json
@@ -20,10 +20,6 @@
       "url": "https://github.com/papakai"
     },
     {
-      "name": "Anthony Schneider",
-      "url": "https://github.com/anthonyschn"
-    },
-    {
       "name": "Tulasi Seelamkurthi",
       "url": "https://github.com/tulsi91"
     }
@@ -48,47 +44,11 @@
     "application"
   ],
   "devDependencies": {
-    "@semantic-release/changelog": "^3.0.4",
-    "@semantic-release/commit-analyzer": "^6.2.0",
-    "@semantic-release/exec": "^3.3.5",
-    "@semantic-release/git": "^7.0.16",
-    "@semantic-release/github": "^5.4.2",
-    "conventional-changelog": "^3.1.8",
+    "@hexonet/semantic-release-github-npm-config": "^1.0.0",
     "semantic-release": "^15.13.12"
   },
-  "release": {
-    "debug": false,
-    "analyzeCommits": {
-      "preset": "angular"
-    },
-    "generateNotes": {
-      "preset": "angular"
-    },
-    "verifyConditions": [
-      "@semantic-release/changelog",
-      "@semantic-release/git",
-      "@semantic-release/github"
-    ],
-    "prepare": [
-      {
-        "path": "@semantic-release/changelog",
-        "changelogFile": "HISTORY.md"
-      },
-      {
-        "path": "@semantic-release/git",
-        "assets": [
-          "HISTORY.md",
-          "package.json",
-          "composer.json"
-        ],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-      }
-    ],
-    "publish": [
-      "@semantic-release/github"
-    ]
-  },
   "scripts": {
-    "semantic-release": "semantic-release"
+    "codeCheck": "phpcs --standard=PSR2 --ignore=\"*/vendor/*\" -q -n --colors *.php",
+    "codeFix": "phpcbf --standard=PSR2 --ignore=\"*/vendor/*\" -q *.php"
   }
 }
