--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
     "registration",
     "application"
   ],
+  "dependencies": {
+    "npm": ">=6.13.4"
+  },
   "devDependencies": {
+    "npm": ">=6.13.4",
     "@hexonet/semantic-release-github-npm-config": "^1.0.0",
     "semantic-release": "^15.13.12"
   },
