build(phpcs): considered PSR1 and PSR2 standards

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "semantic-release": "^15.13.12"
   },
   "scripts": {
-    "codeCheck": "phpcs --standard=PSR2 --ignore=\"*/vendor/*\" -q -n --colors *.php",
-    "codeFix": "phpcbf --standard=PSR2 --ignore=\"*/vendor/*\" -q *.php"
+    "codeCheck": "phpcs --standard=PSR1,PSR2 -q -n --colors *.php",
+    "codeFix": "phpcbf --standard=PSR1,PSR2 -q *.php"
   }
 }
