--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 language: php
-dist: xenial
+dist: bionic
 notifications:
   email:
     recipients:
-    - middleware@hexonet.net
+      - middleware@hexonet.net
     on_success: never
     on_failure: always
 php:
-- 5.6
-- 7.2
-- 7.3
+  - 5.6
+  - 7.2
+  - 7.3
 # Trigger a push build on master and dependabot branches + PRs build on every branches
 # Avoid double build on PRs (See https://github.com/travis-ci/travis-ci/issues/1147)
 branches:
